fix div not showing up on safari

--- a/themes/editorial/css/custom.css
+++ b/themes/editorial/css/custom.css
@@ -344,7 +344,6 @@ dd {
     box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
     line-height: 56px;
     text-align: center;
-    overflow: hidden;
     z-index: 2;
 }
 #main, #sidebar {
